samples/_failures_safe/1761330296_58e90c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb244027.c:133: error: expected ‘;’, ‘,’ or ‘)’ at end of input
